role assignment endpoint ii
